07_retirement/grade.txt
Grading at Mon Apr 20 18:51:35 UTC 2020
Attempting to compile retirement.c
retirement.c: In function ‘retirement’:
retirement.c:46:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int main(){
 ^
retirement.c:46:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main(){
     ^
retirement.c:60:1: error: expected declaration or statement at end of input
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
